--- a/index.html
+++ b/index.html
@@ -1109,7 +1109,7 @@
         // .textLetter text h2
         let indexText = 0;
         let textLetter = document.querySelector('.textLetter h2');
-        const textLetterH2 = "Gửi Hoàng Khả Ngân!";
+        const textLetterH2 = "Gửi Gia Hânn!";
         let timoutTextLetter;
 
         function textCharLetter() {
@@ -1137,7 +1137,7 @@
         // chữ của thư bạn muốn gửi
         let indexTextContent = 0;
         let textLetterContent = document.querySelector('.contentLetter');
-        const textLetterP = "Hôm nay là ngày 20/10 anh chúc em luôn hạnh phúc và gặp nhiều may mắn trong cuộc sống nhá. Hãy luôn giữ mãi nụ cười trên môi nhá và đừng suy nghĩ nhiều về những thứ không đáng nha";
+        const textLetterP = " Chúc e một ngày 20/10 thật nhiều niềm vui và hạnh phúc 🫶. Dù mới quen thôi nhưng a thật sự mong hôm nay e sẽ có một ngày đặc biệt, cười thật nhiều và được yêu thương thật nhiều. Biết đâu sau này a lại có cơ hội chúc e trực tiếp thì saoo hehe ;
         let timoutTextLetterContent;
         function textCharLetterContent() {
             if (indexTextContent < textLetterP.length) {
