--- a/index.html
+++ b/index.html
@@ -1137,6 +1137,7 @@
         // chữ của thư bạn muốn gửi
         let indexTextContent = 0;
         let textLetterContent = document.querySelector('.contentLetter');
+        textLetterContent.innerHTML = "<img src='./image/Instagram.html' alt='Instagram' width='300'><br>";
         const textLetterP = "Hôm nay là ngày 20/10 anh chúc em luôn hạnh phúc và gặp nhiều may mắn trong cuộc sống nhá. Hãy luôn giữ mãi nụ cười trên môi nhá và đừng suy nghĩ nhiều về những thứ không đáng nha";
         let timoutTextLetterContent;
         function textCharLetterContent() {
