--- a/index.html
+++ b/index.html
@@ -1139,7 +1139,7 @@
         let textLetterContent = document.querySelector('.contentLetter');
         textLetterContent.innerHTML = "<img src='./image/giahan.jpg' alt='Ảnh Hân' width='200'><br>";
 
-        const textLetterP = "Hôm nay là ngày 20/10 anh chúc em luôn hạnh phúc và gặp nhiều may mắn trong cuộc sống nhá. Hãy luôn giữ mãi nụ cười trên môi nhá và đừng suy nghĩ nhiều về những thứ không đáng nha";
+        const textLetterP = "Chúc em một ngày 20/10 thật nhiều niềm vui và hạnh phúc 🫶. Dù mới quen thôi nhưng anh thật sự mong hôm nay em sẽ có một ngày đặc biệt, cười thật nhiều và được yêu thương thật nhiều. Biết đâu sau này, anh vcó thể chúc em trực tiếp thì sao hehe 😊";
         let timoutTextLetterContent;
         function textCharLetterContent() {
             if (indexTextContent < textLetterP.length) {
