--- a/index.html
+++ b/index.html
@@ -1137,8 +1137,7 @@
         // chữ của thư bạn muốn gửi
         let indexTextContent = 0;
         let textLetterContent = document.querySelector('.contentLetter');
-        textLetterContent.innerHTML = "<img src='./image/giahan.jpg' alt='Ảnh Hân' width='200'><br>";
-
+        textLetterContent.innerHTML = "<img src='./image/giahan.jpg' alt='Ảnh Gia Hân' width='200'><br>";
         const textLetterP = "Chúc em một ngày 20/10 thật nhiều niềm vui và hạnh phúc 🫶. Dù mới quen thôi nhưng anh thật sự mong hôm nay em sẽ có một ngày đặc biệt, cười thật nhiều và được yêu thương thật nhiều. Biết đâu sau này, anh vcó thể chúc em trực tiếp thì sao hehe 😊";
         let timoutTextLetterContent;
         function textCharLetterContent() {
